# sonicboids

./: Cargo.toml  LICENSE
sonicboids-app/: Cargo.toml  _build.rs  config.toml
sonicboids-app/src/: lib.rs  main.rs  model.rs  osc.rs  settings.rs  update.rs  view.rs
sonicboids-app/src/settings/: types.rs
sonicboids-app/src/view/: main_window.rs  sim.rs
sonicboids-core/: Cargo.toml
sonicboids-core/src/: lib.rs  random.rs  sim.rs  spatial.rs  steering.rs
sonicboids-core/src/random/: types.rs
sonicboids-core/src/sim/: agent.rs  flock.rs  history.rs  params.rs
sonicboids-core/src/spatial/: brute_force.rs  grid.rs  grid_par.rs
sonicboids-core/src/steering/: alignment.rs  cohesion.rs  separation.rs
sonicboids-render/: Cargo.toml
sonicboids-render/src/: renderer.rs
